--- a/index.html
+++ b/index.html
@@ -438,9 +438,9 @@
         <div class="col-md-6 d-flex align-items-stretch">
           <div class="info-box">
             <i class="bx bx-map"></i>
-            <h3>My Address</h3>
-            <p>Sharjah,UAE<br/>
-            Nithya Nivas, Kurikkilad, Kozhikode, Kerala, India</p>
+            <h3>Address</h3>
+            <p><span>UAE : </span> Sharjah,UAE <br/>
+              <span>INDIA : </span> Nithya Nivas, Kurikkilad, Kozhikode, Kerala, India</p>
             
 
 
