--- a/index.html
+++ b/index.html
@@ -145,7 +145,12 @@
               <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
             </div>
           </div>
-
+          <div class="progress">
+            <span class="skill">Wordpress <i class="val">55%</i></span>
+            <div class="progress-bar-wrap">
+              <div class="progress-bar" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
+            </div>
+          </div>
         </div>
 
         <div class="col-lg-6">
